--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body class="bg-gray-100 p-4">
-    <header class="bg-white text-gray-800 p-4 text-left mb-4">
+    <header class="bg-white text-gray-800 shadow-md  p-4 text-left mb-4">
       <h1 class="text-2xl">Amazonリンク短縮ツール</h1>
       <p>
         amazon商品の<span class="text-xl">長すぎるリンク</span>を<span
