--- a/templates/index.html
+++ b/templates/index.html
@@ -15,28 +15,24 @@
     />
   </head>
 
-  <body class="bg-gray-100 p-4">
+  <body style="max-width: 1300px;" class="bg-gray-100 p-4 mx-auto">
     <header class="bg-white text-gray-800 shadow-md  p-4 text-left mb-4">
       <h1 class="text-2xl">Amazonリンク短縮ツール</h1>
       <p>
-        amazon商品の<span class="text-xl">長すぎるリンク</span>を<span
-          class="text-xl"
-          >短縮</span
-        >します（ペースト → 短縮ボタンで実行）
+        amazon商品の<span class="text-xl">長すぎるリンク</span>を
+        <span class="text-xl">短縮</span>します（ペースト → 短縮ボタンで実行）
       </p>
     </header>
 
-    <div
-      class="bg-white p-6 rounded-md shadow-md flex flex-wrap md:flex-nowrap"
-    >
-      <div class="flex-none w-full md:w-2/3 mb-4 md:mb-0">
-        <img
-          src="{{ url_for('static', filename='images/top.jpg') }}"
-          alt="画像"
-          class="w-full h-auto"
-        />
-      </div>
+    <div class="bg-white p-6 rounded-md shadow-md flex flex-wrap md:flex-nowrap">
 
+      <div class="flex-none w-full md:w-2/3 mb-4 md:mb-0">
+        <picture>
+          <source media="(max-width: 599px)" srcset="{{ url_for('static', filename='images/tops.png') }}">
+          <source media="(min-width: 600px)" srcset="{{ url_for('static', filename='images/topm.png') }}">
+          <img src="{{ url_for('static', filename='images/top.png') }}" alt="画像" class="w-full h-auto">
+        </picture>
+      </div>  
       <div class="flex-1 flex flex-col justify-between w-full md:w-1/3 md:pl-4">
         <form
           id="linkForm"
