--- a/templates/index.html
+++ b/templates/index.html
@@ -159,14 +159,8 @@
     <div class="bg-white p-6 mt-6 rounded-md shadow-md flex flex-wrap md:flex-nowrap mt-5">
 
       <div><!-- 価格推移のグラフ（左） -->
-        <div  id="plotlyGraph"
-              class="relative flex-none w-full md:w-2/3 mb-4 md:mb-0 flex justify-center items-center">
+        <div  id="plotlyGraph">
         </div>
-      </div>
-
-      <div><!-- （右） -->
-        <div class="flex-1 flex flex-col justify-between w-full md:w-1/3 md:pl-4">
-        </div> 
       </div>
     </div>
 
